k8s/mockylab-fe-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mockylab-fe-deployment
  namespace: default
  labels:
    app: mockylab-fe
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mockylab-fe
  template:
    metadata:
      labels:
        app: mockylab-fe
    spec:
      containers:
      - name: mockylab-fe
        image: arenumut/mockylab-fe:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
          name: http
        readinessProbe:
          httpGet:
            path: /api/health
            port: 3000
          initialDelaySeconds: 10
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /api/health
            port: 3000
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 2
          successThreshold: 1
          failureThreshold: 3
        resources:
          limits:
            cpu: "400m"
            memory: "512Mi"
          requests:
            cpu: "200m"
            memory: "256Mi"
      imagePullSecrets:
      - name: dockerhub-secret
      nodeSelector:
        kubernetes.io/arch: amd64
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
