k8s/mockylab-fe-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mockylab-fe-service
  namespace: default
  labels:
    app: mockylab-fe
  annotations:
    traefik.ingress.kubernetes.io/service-weights: "100"
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  selector:
    app: mockylab-fe
